# regex

./: LICENSE  README.md  main.c  meson.build  test.c
automaton/: common.c  common.h  convert.c  convert.h  dfa.c  dfa.h  nfa.c  nfa.h  regex.c  regex.h
list/: list.c  list.h
map/: map.c  map.h
queue/: queue.c  queue.h
set/: set.c  set.h
stack/: stack.c  stack.h
